...
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:id="@+id/qrPayment"
            android:background="@drawable/bg_square_">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_action_card"
...
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:id="@+id/ussdPayment"
            android:background="@drawable/bg_square_">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_action_ussd"
...
