<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.paycode.PayCodeActivity">


    <include layout="@layout/isw_content_toolbar" />

    <TextView
        android:id="@+id/amountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:textSize="20sp"
        tools:text="amount: 50,000" />

</LinearLayout>