...
            android:textColor="@android:color/white" />


        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            style="@style/ISW.Bold"
            android:id="@+id/banks"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_black"
            android:drawableRight="@drawable/isw_ic_expanded"
...
        layout="@layout/isw_content_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/ussdText"
        style="@style/ISW.BoldLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/isw_content_margin"
        android:layout_marginLeft="@dimen/isw_content_margin"
        android:gravity="center"
...
