...
    <string name="isw_title_choose_payment">Choose a payment option</string>
    <string name="isw_title_card">Card</string>
    <string name="isw_title_ussd">USSD</string>
    <string name="isw_title_qr_code">QR Code</string>
    <string name="isw_title_pay_code">Pay Code</string>
    <string name="isw_description_qr_code_image">QR Code Image</string>
    <string name="isw_title_generating_code">Generating Code</string>
    <string name="isw_title_loading">Loading…</string>
    <string name="isw_title_get_bank_code">get bank code</string>
    <string name="isw_title_print_receipt">Print Receipt</string>
    <string name="isw_title_transaction_approved">Transaction Approved</string>
    <string name="isw_title_transaction_in_progress">Transaction in progress</string>
    <string name="isw_title_checking_transaction_status">Checking transaction status…</string>
    <string name="isw_title_transaction_successful">Transaction Successful</string>
    <string name="isw_title_transaction_completed_successfully">Transaction completed successfully</string>
    <string name="isw_title_transaction_not_confirmed">Transaction not confirmed</string>
    <string name="isw_content_transaction_not_confirmed">Unable to confirm transaction, please try again later</string>
    <string name="isw_title_transaction_error">Transaction Error</string>
...
