...
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/isw_content_padding"
            android:paddingTop="@dimen/isw_content_small_padding">

            <ImageView
                android:id="@+id/qrCodeImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_qr_code_boundry"
                android:contentDescription="@string/isw_description_qr_code_image"
                android:scaleType="center"
...
